fix build and minor rewrite